# SpringSimulationIFX

./: .gitignore  CMakeLists.txt  README.md
spring/: CMakeLists.txt
spring/src/: main.cpp  spring_gui.cpp
